<resources>
    <string name="app_name">NskEvent-Android</string>
    <string name="action_settings">Settings</string>
    <string name="create_event">Create Event</string>
    <string name="new_event">New Event</string>
    <string name="loading">Loading</string>
    <string name="message"></string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="accept">Согласиться</string>
    <string name="refuse">Отказаться</string>
    <string name="place">Место проведения: </string>
    <string name="date">Дата: </string>
    <string name="email_text_hint">Введите ваш email для подтверждения</string>
    <string name="email_edit_text_hint">youremail@mail.ru</string>
    <string name="date_hint">dd.mm.yyyy</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="members">Участники: </string>
</resources>
